--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    compile project(':dto')
     compile 'com.android.support:appcompat-v7:23.2.+'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.+'
     compile 'com.android.support:recyclerview-v7:23.2.+'
-    compile 'com.thoughtworks.xstream:xstream:1.4.9'
+
+    testCompile 'junit:junit:4.12'
 }
