--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,18 @@ android {
 }
 
 dependencies {
+    // internal dependencies
     compile project(':dto')
+
+    // google-specific
     compile 'com.android.support:appcompat-v7:23.2.+'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.+'
     compile 'com.android.support:recyclerview-v7:23.2.+'
+
+    // 3rd party deps
+    compile 'com.google.code.gson:gson:2.6.2'       // JSON (de)serialization
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'     // convenient HTTP processing on Android
 
     testCompile 'junit:junit:4.12'
 }
