--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'androiddebugkey'
+            storeFile file('C:/Users/Smolko/.android/debug.keystore')
+            storePassword 'android'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "com.dao.mydebts"
         minSdkVersion 23
@@ -15,23 +22,29 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+        debug {
+            signingConfig signingConfigs.config
+        }
+    }
+    lintOptions{
+        abortOnError false
     }
 }
 
 dependencies {
     // internal dependencies
     compile project(':dto')
-
     // google-specific
     compile 'com.android.support:appcompat-v7:23.2.+'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.+'
     compile 'com.android.support:recyclerview-v7:23.2.+'
-
     // 3rd party deps
-    compile 'com.google.code.gson:gson:2.6.2'       // JSON (de)serialization
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'     // convenient HTTP processing on Android
-
+    compile 'com.google.code.gson:gson:2.6.2'
+    // JSON (de)serialization
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    // convenient HTTP processing on Android
     testCompile 'junit:junit:4.12'
 }
