--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'androiddebugkey'
-            storeFile file('C:/Users/Smolko/.android/debug.keystore')
-            storePassword 'android'
-        }
-    }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.dao.mydebts"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,14 +15,20 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
         }
+
         debug {
-            signingConfig signingConfigs.config
+            minifyEnabled false
         }
     }
-    lintOptions{
+
+    lintOptions {
         abortOnError false
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
@@ -37,10 +36,10 @@ dependencies {
     // internal dependencies
     compile project(':dto')
     // google-specific
-    compile 'com.android.support:appcompat-v7:23.2.+'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:cardview-v7:23.2.+'
-    compile 'com.android.support:recyclerview-v7:23.2.+'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
     // 3rd party deps
     compile 'com.google.code.gson:gson:2.6.2'
     // JSON (de)serialization
