--- a/dto/build.gradle
+++ b/dto/build.gradle
@@ -4,5 +4,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
 
     testCompile 'junit:junit:4.12'
-    compile 'org.codehaus.groovy:groovy-all:2.4.6'
 }
+
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
