--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,10 @@ dependencies {
     compile project(':dto')
     // google-specific
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
     // 3rd party deps
     compile 'com.google.code.gson:gson:2.6.2'
     // JSON (de)serialization
