--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         <meta-data android:name="DATABASE" android:value="accounts.db" />
         <meta-data android:name="VERSION" android:value="3" />
         <meta-data android:name="QUERY_LOG" android:value="true" />
-        <!--Disabled because it doesn't works now-->
-        <!--<meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.dao.mydebts.entities" />-->
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.dao.mydebts.entities" />
 
         <activity
             android:name=".DebtsListActivity"
