--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea
 .DS_Store
-/build
-/captures
-/dto/build
-/srv/build
+local.properties
+build
