--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install: true
 script:
     - mv -v settings.gradle{.travis,}
     - ./gradlew :mydebts-server:build
+
+after_success:
+    - ./gradlew jacocoTestReport coveralls
