--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-//include ':app'
+include ':app'
 include ':dto'
 include ':www'
 
 project(':www').name = 'mydebts-server'
 project(':dto').name = 'mydebts-dto'
-//project(':app').name = 'mydebts-android-app'
+project(':app').name = 'mydebts-android-app'
