--- a/www/build.gradle
+++ b/www/build.gradle
@@ -1,26 +1,24 @@
-version = '1.0'
-
-repositories {
-    mavenCentral()
-}
-
 buildscript {
-    repositories {
-        mavenCentral()
-    }
     dependencies {
         classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE'
     }
 }
 
+// community plugins
+plugins {
+    id 'com.github.kt3k.coveralls' version '2.6.3'
+}
+
+// central
 apply plugin: 'idea'
 apply plugin: 'groovy'
-apply plugin: "jacoco"
+apply plugin: 'jacoco'
 apply plugin: 'application'
 apply plugin: 'spring-boot'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+version = '1.0'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencyManagement {
     dependencies {
@@ -43,16 +41,13 @@ dependencies {
     // database
     compile 'com.h2database:h2:1.4.191'
     // junit
-    testCompile 'junit:junit'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'com.jayway.jsonpath:json-path:2.0.0'
 }
 
 jacocoTestReport {
-    dependsOn test
-
     reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
         html.enabled = true
+        xml.enabled = true
     }
 }
